# palworld-mcp

./: .gitignore  README.md  pyproject.toml
src/palworld_mcp/: server.py
tools/: collect_assets.py  collect_stats.py  generate.py  initialize_db.py
