[project]
name = "palworld-mcp"
version = "0.0.1"
description = "MCP Server for Palworld"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb>=1.2.2",
    "mcp>=1.6.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
]

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
