[project]
name = "palworld-mcp"
version = "0.0.1"
description = "MCP Server for Palworld"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckdb>=1.2.2",
    "langchain>=0.3.23",
    "langchain-deepseek>=0.1.3",
    "mcp>=1.6.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
]

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
